Fixed body margin Reduced image sizes Realigned body Added img for social links

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -5,6 +5,22 @@ body
     background-image: url(../images/background.jpg);
     background-attachment: fixed;
     background-color: #150738;
+    margin: 0px;
+}
+
+a:link
+{
+    color: #c64500;
+}
+
+a:hover
+{
+    color: #910101;
+}
+
+a:visited
+{
+    color: #a30059;
 }
 
 div#cabecalho
@@ -63,7 +79,7 @@ div#about
     position: fixed;
     padding-left: 10px;
     padding-right: 10px;
-    top: 20%;
+    top: 15%;
     left: 65%;
     background-color: rgba(11, 1, 33, 0.6);
     z-index: 0;
@@ -93,16 +109,20 @@ div#about img
     z-index: 1;
     float: right;
     border: 4px solid white;
+    border-radius: 50%;
     box-shadow: 1px 1px 4px dimgrey;
 }
 
 figure.imagenscorpo
 {
+    float: left;
+    margin: 20px;
     position: relative;
     max-height: 60%;
     max-width: 60%;
-    border: 4px solid purple;
-    box-shadow: 1px 1px 4px dimgrey;
+    border: 4px solid #2b0d99;
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px #1b0766;
 }
 
 figure.imagenscorpo img
@@ -136,11 +156,17 @@ figure.imagenscorpo:hover figcaption
 
 footer
 {
-    width: 100%;
-    height: 50px;
+    height: 100%;
     padding-top: 2px;
+    padding-right: 20px;
     color: dimgrey;
     font-size: 12px;
     text-align: right;
     background-color: rgb(14, 4, 38);
+}
+
+footer img
+{
+    margin-right: 15px;
+    margin-bottom: -20px;
 }
